view permissions added and ajusted, quick and dirty

--- a/login/base/templates/base.html
+++ b/login/base/templates/base.html
@@ -34,6 +34,7 @@
           </a>
           <span class="tooltip">Dashboard</span>
         </li>
+        {% if perms.tasks.view_task %}
         <li>
           <a href="/gestion-tareas/">
             <i class="bx bx-task"></i>
@@ -41,6 +42,8 @@
           </a>
           <span class="tooltip">Manage Tasks</span>
         </li>
+        {% endif %}
+        {% if perms.user.edit_user %} 
         <li>
           <a href="/gestion-usuarios/">
             <i class="bx bxs-user-account"></i>
@@ -48,6 +51,7 @@
           </a>
           <span class="tooltip">Manage Users</span>
         </li>
+        {% endif %}
         <li>
           <a href="/mis-tareas/">
             <i class="bx bxs-notepad"></i>
@@ -117,6 +121,7 @@
                 </div>
               </div>
             </div>
+            {% if request.user.description == "Project Manager" %}
             <div class="col-md-4">
               <div class="card mb-3">
                 <div class="card-header">Quick Actions</div>
@@ -126,6 +131,7 @@
                 </div>
               </div>
             </div>
+            {% endif %}
           </div>
         </div>
       </div>
