--- a/login/base/templates/editar-tarea.html
+++ b/login/base/templates/editar-tarea.html
@@ -33,6 +33,7 @@
             </a>
             <span class="tooltip">Dashboard</span>
           </li>
+          {% if perms.tasks.view_task %}
           <li>
             <a href="/gestion-tareas/">
               <i class="bx bx-task"></i>
@@ -40,6 +41,8 @@
             </a>
             <span class="tooltip">Manage Tasks</span>
           </li>
+          {% endif %}
+          {% if perms.user.edit_user %} 
           <li>
             <a href="/gestion-usuarios/">
               <i class="bx bxs-user-account"></i>
@@ -47,6 +50,7 @@
             </a>
             <span class="tooltip">Manage Users</span>
           </li>
+          {% endif %}
           <li>
             <a href="/mis-tareas/">
               <i class="bx bxs-notepad"></i>
