--- a/login/base/templates/gestion-listausuarios.html
+++ b/login/base/templates/gestion-listausuarios.html
@@ -30,6 +30,7 @@
           </a>
           <span class="tooltip">Dashboard</span>
         </li>
+        {% if perms.tasks.view_task %}
         <li>
           <a href="/gestion-tareas/">
             <i class="bx bx-task"></i>
@@ -37,6 +38,8 @@
           </a>
           <span class="tooltip">Manage Tasks</span>
         </li>
+        {% endif %}
+        {% if perms.user.edit_user %} 
         <li>
           <a href="/gestion-usuarios/">
             <i class="bx bxs-user-account"></i>
@@ -44,6 +47,7 @@
           </a>
           <span class="tooltip">Manage Users</span>
         </li>
+        {% endif %}
         <li>
           <a href="/mis-tareas/">
             <i class="bx bxs-notepad"></i>
