--- a/login/base/templates/base.html
+++ b/login/base/templates/base.html
@@ -121,7 +121,7 @@
                 </div>
               </div>
             </div>
-            {% if request.user.description == "Project Manager" %}
+            {% if perms.user.edit_user %} 
             <div class="col-md-4">
               <div class="card mb-3">
                 <div class="card-header">Quick Actions</div>
